# learnopengl

./: CMakeLists.txt  camera_system.cpp  camera_system.h  common_definitions.h  common_settings.h  image_framework.cpp  image_framework.h  main.cpp  opengl_framework.cpp  opengl_framework.h  shader_program.cpp  shader_program.h  texture_applier.cpp  texture_applier.h  triangles_drawer.cpp  triangles_drawer.h
examples/: ch10_camera.cpp  ch10_camera.h  ch10_shaders.h  ch12_colors.cpp  ch12_colors.h  ch12_shaders.h  ch13_basic_lighting.cpp  ch13_basic_lighting.h  ch13_shaders.h  ch14_materials.cpp  ch14_materials.h  ch14_shaders.h  ch15_lighting_maps.cpp  ch15_lighting_maps.h  ch15_shaders.h  ch5_hello_triangle.cpp  ch5_hello_triangle.h  ch5_shaders.h  ch6_shaders.cpp  ch6_shaders.h  ch6_shaders_examples.cpp  ch6_shaders_examples.h  ch7_shaders.h  ch7_textures.cpp  ch7_textures.h  ch8_shaders.h  ch8_transformation.cpp  ch8_transformation.h  ch9_coord_system.cpp  ch9_coord_system.h  ch9_shaders.h  hello_triangle.cpp  hello_triangle.h  shaders.cpp  shaders.h
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: ch6_shaders_structure.h  shaders_chapter.h  simple_triangle.h
